--- a/app/design/frontend/base/default/template/configurableswatches/catalog/product/view/type/options/configurable/swatches.phtml
+++ b/app/design/frontend/base/default/template/configurableswatches/catalog/product/view/type/options/configurable/swatches.phtml
@@ -30,7 +30,7 @@ $_swatchArray = $_config->attributes->$_id;
 ?>
 <dt class="swatch-attr">
     <label id="<?= $_attrCode ?>_label" class="required">
-        <em>*</em><?= $_attribute->getLabel() ?>:
+        <?= $_attribute->getLabel() ?>:
         <span id="select_label_<?= $_attrCode ?>" class="select-label"></span>
     </label>
 </dt>
