--- a/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/forgotpassword.phtml
@@ -22,7 +22,7 @@
         <p class="required"><?= $this->__('* Required Fields') ?></p>
         <ul class="form-list">
             <li>
-                <label for="email_address" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
+                <label for="email_address" class="required"><?= $this->__('Email Address') ?></label>
                 <div class="input-box">
                     <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" name="email" alt="email" id="email_address" class="input-text required-entry validate-email" value="<?= $this->escapeHtml($this->getEmailValue()) ?>" />
                 </div>
