--- a/app/design/frontend/base/default/template/customer/form/resetforgottenpassword.phtml
+++ b/app/design/frontend/base/default/template/customer/form/resetforgottenpassword.phtml
@@ -22,7 +22,7 @@
         <ul class="form-list">
             <li class="fields">
                 <div class="field">
-                    <label for="password" class="required"><em>*</em><?= $this->__('New Password') ?></label>
+                    <label for="password" class="required"><?= $this->__('New Password') ?></label>
                     <div class="input-box">
                         <?php $minPasswordLength = $this->getMinPasswordLength(); ?>
                         <input type="password"
@@ -36,7 +36,7 @@
                     </div>
                 </div>
                 <div class="field">
-                    <label for="confirmation" class="required"><em>*</em><?= $this->__('Confirm New Password') ?></label>
+                    <label for="confirmation" class="required"><?= $this->__('Confirm New Password') ?></label>
                     <div class="input-box">
                         <input type="password" class="input-text required-entry validate-cpassword" name="confirmation" id="confirmation" autocomplete="new-password" />
                     </div>
