--- a/app/design/frontend/base/default/template/customer/widget/gender.phtml
+++ b/app/design/frontend/base/default/template/customer/widget/gender.phtml
@@ -11,7 +11,7 @@
 
 /** @var Mage_Customer_Block_Widget_Gender $this */
 ?>
-<label for="<?= $this->getFieldId('gender')?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?= $this->__('Gender') ?></label>
+<label for="<?= $this->getFieldId('gender')?>"<?= $this->isRequired() ? ' class="required"' : '' ?>><?= $this->__('Gender') ?></label>
 <div class="input-box">
     <select id="<?= $this->getFieldId('gender')?>" name="<?= $this->getFieldName('gender') ?>" title="<?= $this->quoteEscape($this->__('Gender')) ?>"<?php if ($this->isRequired()):?> class="validate-select"<?php endif ?> <?= $this->getFieldParams() ?>>
         <?php $options = Mage::getResourceSingleton('customer/customer')->getAttribute('gender')->getSource()->getAllOptions();?>
