--- a/app/design/frontend/base/default/template/sales/widget/guest/form.phtml
+++ b/app/design/frontend/base/default/template/sales/widget/guest/form.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 /** @var Mage_Sales_Block_Widget_Guest_Form $this */
@@ -31,25 +31,25 @@
                            </div>
                        </li>
                        <li>
-                           <label for="oar_order_id" class="required"><?= Mage::helper('sales')->__('Order ID') ?> <em>*</em></label>
+                           <label for="oar_order_id" class="required"><?= Mage::helper('sales')->__('Order ID') ?> </label>
                            <div class="input-box">
                                <input type="text" class="input-text required-entry" id="oar_order_id" name="oar_order_id"  autocomplete="off" />
                            </div>
                        </li>
                        <li>
-                           <label for="oar_billing_lastname" class="required"><?= Mage::helper('sales')->__('Billing Last Name') ?> <em>*</em></label>
+                           <label for="oar_billing_lastname" class="required"><?= Mage::helper('sales')->__('Billing Last Name') ?> </label>
                            <div class="input-box">
                                <input type="text" class="input-text required-entry" id="oar_billing_lastname" name="oar_billing_lastname" autocomplete="off" />
                            </div>
                        </li>
                        <li id="oar-email">
-                           <label for="oar_email" class="required"><?= Mage::helper('sales')->__('Email Address') ?> <em>*</em></label>
+                           <label for="oar_email" class="required"><?= Mage::helper('sales')->__('Email Address') ?> </label>
                            <div class="input-box">
                                <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text validate-email required-entry" id="oar_email" name="oar_email" autocomplete="off" />
                            </div>
                        </li>
                        <li id="oar-zip" style="display:none;">
-                           <label for="oar_zip" class="required"><?= Mage::helper('sales')->__('Billing ZIP Code') ?> <em>*</em></label>
+                           <label for="oar_zip" class="required"><?= Mage::helper('sales')->__('Billing ZIP Code') ?> </label>
                            <div class="input-box">
                                <input type="text" class="input-text required-entry" id="oar_zip" name="oar_zip" />
                            </div>
