--- a/app/design/frontend/base/default/template/wishlist/sharing.phtml
+++ b/app/design/frontend/base/default/template/wishlist/sharing.phtml
@@ -21,7 +21,7 @@
         <h2 class="legend"><?= $this->__('Sharing Information') ?></h2>
         <ul class="form-list">
             <li class="wide">
-                <label for="email_address" class="required"><em>*</em><?= $this->__('Up to 5 email addresses, separated by commas') ?></label>
+                <label for="email_address" class="required"><?= $this->__('Up to 5 email addresses, separated by commas') ?></label>
                 <div class="input-box">
                     <textarea name="emails" cols="60" rows="5" id="email_address" class="validate-emails required-entry"><?= $this->getEnteredData('emails') ?></textarea>
                 </div>
