--- a/app/design/frontend/base/default/template/checkout/onepage/login.phtml
+++ b/app/design/frontend/base/default/template/checkout/onepage/login.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2021-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -74,13 +74,13 @@ $isAllowedGuestCheckout = $this->helper('checkout')->isAllowedGuestCheckout($thi
             <p><?= $this->__('Please log in below:') ?></p>
             <ul class="form-list">
                 <li>
-                    <label for="login-email" class="required"><em>*</em><?= $this->__('Email Address') ?></label>
+                    <label for="login-email" class="required"><?= $this->__('Email Address') ?></label>
                     <div class="input-box">
                         <input type="email" autocapitalize="off" autocorrect="off" spellcheck="false" class="input-text required-entry validate-email" id="login-email" name="login[username]" value="<?= $this->escapeHtml($this->getUsername()) ?>" />
                     </div>
                 </li>
                 <li>
-                    <label for="login-password" class="required"><em>*</em><?= $this->__('Password') ?></label>
+                    <label for="login-password" class="required"><?= $this->__('Password') ?></label>
                     <div class="input-box">
                         <input type="password" class="input-text required-entry" id="login-password" name="login[password]" autocomplete="off" />
                     </div>
