--- a/app/design/frontend/base/default/template/customer/widget/taxvat.phtml
+++ b/app/design/frontend/base/default/template/customer/widget/taxvat.phtml
@@ -11,7 +11,7 @@
 
 /** @var Mage_Customer_Block_Widget_Taxvat $this */
 ?>
-<label for="<?= $this->getFieldId('taxvat')?>"<?php if ($this->isRequired()) echo ' class="required"' ?>><?php if ($this->isRequired()) echo '<em>*</em>' ?><?= $this->__('Tax/VAT number') ?></label>
+<label for="<?= $this->getFieldId('taxvat')?>"<?= $this->isRequired() ? ' class="required"' : '' ?>><?= $this->__('Tax/VAT number') ?></label>
 <div class="input-box">
     <input type="text" id="<?= $this->getFieldId('taxvat')?>" name="<?= $this->getFieldName('taxvat') ?>" value="<?= $this->escapeHtml($this->getTaxvat()) ?>" title="<?= $this->quoteEscape($this->__('Tax/VAT number')) ?>" class="input-text <?= $this->helper('customer/address')->getAttributeValidationClass('taxvat') ?>" <?= $this->getFieldParams() ?> />
 </div>
