--- a/app/design/frontend/base/default/template/payment/form/ccsave.phtml
+++ b/app/design/frontend/base/default/template/payment/form/ccsave.phtml
@@ -15,13 +15,13 @@
 <ul class="form-list" id="payment_form_<?= $_code ?>" style="display:none;">
     <li>
         <p class="required"><?= $this->__('* Required Fields') ?></p>
-        <label for="<?= $_code ?>_cc_owner" class="required"><em>*</em><?= $this->__('Name on Card') ?></label>
+        <label for="<?= $_code ?>_cc_owner" class="required"><?= $this->__('Name on Card') ?></label>
         <div class="input-box">
             <input type="text" title="<?= $this->quoteEscape($this->__('Name on Card')) ?>" class="input-text required-entry" id="<?= $_code ?>_cc_owner" name="payment[cc_owner]" value="<?= $this->escapeHtml($this->getInfoData('cc_owner')) ?>" />
         </div>
     </li>
     <li>
-        <label for="<?= $_code ?>_cc_type" class="required"><em>*</em><?= $this->__('Credit Card Type') ?></label>
+        <label for="<?= $_code ?>_cc_type" class="required"><?= $this->__('Credit Card Type') ?></label>
         <div class="input-box">
             <select id="<?= $_code ?>_cc_type" name="payment[cc_type]" title="<?= $this->quoteEscape($this->__('Credit Card Type')) ?>" class="required-entry validate-cc-type-select">
                 <option value=""><?= $this->__('--Please Select--') ?></option>
@@ -33,13 +33,13 @@
         </div>
     </li>
     <li>
-        <label for="<?= $_code ?>_cc_number" class="required"><em>*</em><?= $this->__('Credit Card Number') ?></label>
+        <label for="<?= $_code ?>_cc_number" class="required"><?= $this->__('Credit Card Number') ?></label>
         <div class="input-box">
             <input type="text" pattern="\d*" id="<?= $_code ?>_cc_number" name="payment[cc_number]" title="<?= $this->quoteEscape($this->__('Credit Card Number')) ?>" class="input-text validate-cc-number validate-cc-type" value="" />
         </div>
     </li>
     <li>
-        <label for="<?= $_code ?>_expiration" class="required"><em>*</em><?= $this->__('Expiration Date') ?></label>
+        <label for="<?= $_code ?>_expiration" class="required"><?= $this->__('Expiration Date') ?></label>
         <div class="input-box">
             <div class="v-fix">
                 <select id="<?= $_code ?>_expiration" name="payment[cc_exp_month]" class="month validate-cc-exp required-entry">
@@ -62,7 +62,7 @@
     <?= $this->getChildHtml() ?>
     <?php if($this->hasVerification()): ?>
     <li>
-        <label for="<?= $_code ?>_cc_cid" class="required"><em>*</em><?= $this->__('Card Verification Number') ?></label>
+        <label for="<?= $_code ?>_cc_cid" class="required"><?= $this->__('Card Verification Number') ?></label>
         <div class="input-box">
             <div class="v-fix">
                 <input type="text" pattern="\d*" title="<?= $this->quoteEscape($this->__('Card Verification Number')) ?>" class="input-text cvv required-entry validate-cc-cvn" id="<?= $_code ?>_cc_cid" name="payment[cc_cid]" value="" />
@@ -74,7 +74,7 @@
     <?php if ($this->hasSsCardType()): ?>
     <li id="<?= $_code ?>_cc_type_ss_div">
         <ul class="inner-form">
-            <li class="form-alt"><label for="<?= $_code ?>_cc_issue" class="required"><em>*</em><?= $this->__('Switch/Solo/Maestro Only') ?></label></li>
+            <li class="form-alt"><label for="<?= $_code ?>_cc_issue" class="required"><?= $this->__('Switch/Solo/Maestro Only') ?></label></li>
             <li>
                 <label for="<?= $_code ?>_cc_issue"><?= $this->__('Issue Number') ?>:</label>
                 <span class="input-box">
