--- a/app/design/frontend/base/default/template/review/form.phtml
+++ b/app/design/frontend/base/default/template/review/form.phtml
@@ -43,21 +43,21 @@
 
                 <ul class="form-list">
                     <li>
-                        <label for="review_field" class="required"><em>*</em><?= $this->__('Let us know your thoughts') ?></label>
+                        <label for="review_field" class="required"><?= $this->__('Let us know your thoughts') ?></label>
                         <div class="input-box">
                             <textarea name="detail" id="review_field" cols="5" rows="3" class="required-entry"><?= $this->escapeHtml($data->getDetail()) ?></textarea>
                         </div>
                     </li>
 
                    <li class="inline-label">
-                        <label for="summary_field" class="required"><em>*</em><?= $this->__('Summary of Your Review') ?></label>
+                        <label for="summary_field" class="required"><?= $this->__('Summary of Your Review') ?></label>
                         <div class="input-box">
                             <input type="text" name="title" id="summary_field" class="input-text required-entry" value="<?= $this->escapeHtml($data->getTitle()) ?>" />
                         </div>
                    </li>
 
                     <li class="inline-label">
-                        <label for="nickname_field" class="required"><em>*</em><?= $this->__("What's your nickname?") ?></label>
+                        <label for="nickname_field" class="required"><?= $this->__("What's your nickname?") ?></label>
                         <div class="input-box">
                             <input type="text" name="nickname" id="nickname_field" class="input-text required-entry" value="<?= $this->escapeHtml($data->getNickname()) ?>" />
                         </div>
