--- a/app/design/frontend/base/default/template/sales/guest/form.phtml
+++ b/app/design/frontend/base/default/template/sales/guest/form.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2025 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 
@@ -23,7 +23,7 @@
         <ul class="form-list">
            <li>
                <div class="input-box">
-                   <label for="oar_order_id" class="required"><?= Mage::helper('sales')->__('Order ID') ?> <em>*</em></label>
+                   <label for="oar_order_id" class="required"><?= Mage::helper('sales')->__('Order ID') ?></label>
                </div>
                <div class="input-box">
                    <input type="text" class="input-text required-entry" id="oar_order_id" name="oar_order_id" style="width:300px;"/>
@@ -36,7 +36,7 @@
            </li>
            <li>
                <div class="input-box">
-                   <label for="oar_billing_lastname" class="required"><?= Mage::helper('sales')->__('Billing Last Name') ?> <em>*</em></label>
+                   <label for="oar_billing_lastname" class="required"><?= Mage::helper('sales')->__('Billing Last Name') ?></label>
                </div>
                <div class="input-box">
                    <input type="text" class="input-text required-entry" id="oar_billing_lastname" name="oar_billing_lastname"  style="width:300px;"/>
@@ -55,7 +55,7 @@
            </li>
            <li id="oar-email">
                <div class="input-box">
-                   <label for="oar_email" class="required"><?= Mage::helper('sales')->__('Email Address') ?> <em>*</em></label>
+                   <label for="oar_email" class="required"><?= Mage::helper('sales')->__('Email Address') ?></label>
                </div>
                <div class="input-box">
                    <input type="text" class="input-text validate-email required-entry" id="oar_email" name="oar_email"  style="width:300px;"/>
@@ -63,7 +63,7 @@
            </li>
            <li id="oar-zip" style="display:none;">
                <div class="input-box">
-                   <label for="oar_zip" class="required"><?= Mage::helper('sales')->__('Billing ZIP Code') ?> <em>*</em></label>
+                   <label for="oar_zip" class="required"><?= Mage::helper('sales')->__('Billing ZIP Code') ?></label>
                </div>
                <div class="input-box">
                    <input type="text" class="input-text required-entry" id="oar_zip" name="oar_zip" style="width:300px;"/>
