--- a/app/design/frontend/base/default/template/sales/payment/form/billing/agreement.phtml
+++ b/app/design/frontend/base/default/template/sales/payment/form/billing/agreement.phtml
@@ -5,7 +5,7 @@
  * @package     base_default
  * @copyright   Copyright (c) 2006-2020 Magento, Inc. (https://magento.com)
  * @copyright   Copyright (c) 2022-2024 The OpenMage Contributors (https://openmage.org)
- * @copyright   Copyright (c) 2024 Maho (https://mahocommerce.com)
+ * @copyright   Copyright (c) 2024-2025 Maho (https://mahocommerce.com)
  * @license     https://opensource.org/licenses/afl-3.0.php  Academic Free License (AFL 3.0)
  */
 ?>
@@ -13,7 +13,7 @@
 <?php $_code=$this->getMethodCode() ?>
 <ul class="form-list" id="payment_form_<?= $_code ?>" style="display:none;">
     <li>
-        <label for="<?= $_code ?>_ba_agreement_id" class="required"><em>*</em><?= $this->__('Billing Agreement') ?></label>
+        <label for="<?= $_code ?>_ba_agreement_id" class="required"><?= $this->__('Billing Agreement') ?></label>
         <div class="input-box">
             <select id="<?= $_code ?>_ba_agreement_id" name="payment[<?= $this->getTransportName() ?>]" class="required-entry">
                 <option value=""><?= $this->__('-- Please Select Billing Agreement--') ?></option>
